--- a/_includes/themes/mytheme/default.html
+++ b/_includes/themes/mytheme/default.html
@@ -44,35 +44,48 @@
 
   <body>
     <div id="wrap">
-      <h1>SỬA KHÓA BUÔN MA THUỘT</h1>
-      <nav class="navbar navbar-default" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
-        </div>
+      <header>
+        <div class="container">
+          <div class="row">
+            <div id="logo">
+              <a href="{{ HOME_PATH }}">
+                <h1>SỬA KHÓA BUÔN MA THUỘT</h1>
+              </a>    
+            </div>
+          </div>
+          <div class="row">
+            <nav class="navbar navbar-inverse" role="navigation">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
+              </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="jb-navbar-collapse">
-          <ul class="nav navbar-nav">
-              <li><a href="/about/index.html">Làm</a></li>
-              <li><a href="/keys/index.html">Chìa</a></li>
-              <li><a href="/locks/index.html">Khóa</a></li>
-              <li><a href="/cars/index.html">Ô tô</a></li>
-              <li><a href="/safes/index.html">Két sắt</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </nav>
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="jb-navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="/about/index.html">Làm</a></li>
+                    <li><a href="/keys/index.html">Chìa</a></li>
+                    <li><a href="/locks/index.html">Khóa</a></li>
+                    <li><a href="/cars/index.html">Ô tô</a></li>
+                    <li><a href="/safes/index.html">Két sắt</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                  {% assign pages_list = site.pages %}
+                  {% assign group = 'navigation' %}
+                  {% include JB/pages_list %}
+                </ul>
+              </div><!-- /.navbar-collapse -->
+            </nav>
+          </div>
+        </div>
+      </header>
+      
 
       <div class="container">
         {{ content }}
@@ -82,10 +95,12 @@
 
     <div id="footer">
       <div class="container">
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-          với sự giúp đỡ của <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          và <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>
-        </p>
+        <div class="row">
+          <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
+            với sự giúp đỡ của <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+            và <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>
+          </p>
+        </div>
       </div>
     </div>
 
