--- a/assets/themes/mytheme/css/style.css
+++ b/assets/themes/mytheme/css/style.css
@@ -1,3 +1,9 @@
+/* media tag */
+@media only screen and (max-width: 480px) {
+    .location {
+      width: 100%;
+    }
+}
 /* Custom container */
 
 /* Replaced with normal container and standard footer */
@@ -84,6 +90,6 @@ h1, h2, h3, h4 {
 
 /* map location */
 .location {
-
+  display: inline-block;
 }
 
