--- a/_includes/themes/mytheme/default.html
+++ b/_includes/themes/mytheme/default.html
@@ -52,6 +52,9 @@
                 <h1>SỬA KHÓA BUÔN MA THUỘT</h1>
               </a>    
             </div>
+            <div>
+              <p>Kinh doanh khóa, chìa khóa và các vật tư ngành khóa.</p>
+            </div>
           </div>
           <div class="row">
             <nav class="navbar navbar-inverse" role="navigation">
