--- a/_includes/themes/mytheme/default.html
+++ b/_includes/themes/mytheme/default.html
@@ -31,44 +31,36 @@
   <body>
     <div id="wrap">
       <header>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12">
-              <h1 id="logo"><a href="{{ HOME_PATH }}">SỬA KHÓA BUÔN MA THUỘT</a></h1>
-              <p>Kinh doanh khóa, chìa khóa và các vật tư ngành khóa.</p>
+        <nav class="navbar navbar-inverse" role="navigation">
+          <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="{{ HOME_PATH }}"><img src="/images/logo/tien-phat-locksmith-brand.png" alt="{{ site.title }}" height="30"></a>
             </div>
-          </div>
-          <div class="row">
-            <nav class="navbar navbar-inverse" role="navigation">
-              <!-- Brand and toggle get grouped for better mobile display -->
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
-              </div>
 
-              <!-- Collect the nav links, forms, and other content for toggling -->
-              <div class="collapse navbar-collapse" id="jb-navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="/about/index.html">Làm</a></li>
-                    <li><a href="/keys/index.html">Chìa</a></li>
-                    <li><a href="/locks/index.html">Khóa</a></li>
-                    <li><a href="/cars/index.html">Ô tô</a></li>
-                    <li><a href="/safes/index.html">Két sắt</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                  {% assign pages_list = site.pages %}
-                  {% assign group = 'navigation' %}
-                  {% include JB/pages_list %}
-                </ul>
-              </div><!-- /.navbar-collapse -->
-            </nav>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="jb-navbar-collapse">
+              <ul class="nav navbar-nav">
+                  <li><a href="/about/index.html">Làm</a></li>
+                  <li><a href="/keys/index.html">Chìa</a></li>
+                  <li><a href="/locks/index.html">Khóa</a></li>
+                  <li><a href="/cars/index.html">Ô tô</a></li>
+                  <li><a href="/safes/index.html">Két sắt</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                {% assign pages_list = site.pages %}
+                {% assign group = 'navigation' %}
+                {% include JB/pages_list %}
+              </ul>
+            </div><!-- /.navbar-collapse -->
           </div>
-        </div>
+        </nav>
       </header>
       
       <!-- main content -->
