--- a/_includes/themes/mytheme/default.html
+++ b/_includes/themes/mytheme/default.html
@@ -1,102 +1,149 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{ page.title }}</title>
-    {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
-    <meta name="author" content="{{ site.author.name }}">
+<html lang="vi">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>{{ page.title }}</title>
+  {% if page.description %}
+  <meta name="description" content="{{ page.description }}">
+  {% endif %}
+  <meta name="author" content="{{ site.author.name }}">
 
-    <!-- Enable responsive viewport -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- favicon -->
-    <link rel="shortcut icon" href="/images/favicon.ico" />    
-    <!-- Bootstrap styles -->
-    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Optional theme -->
-    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
-    <!-- Sticky Footer -->
-    <link href="{{ ASSET_PATH }}/bootstrap/css/bs-sticky-footer.css" rel="stylesheet">
-    <!-- JPList css -->
-    <link href="{{ ASSET_PATH }}/jplist/css/jplist.core.min.css" rel="stylesheet" type="text/css" />
-    <link href="{{ ASSET_PATH }}/jplist/css/jplist.pagination-bundle.min.css" rel="stylesheet" type="text/css" />
-    <link href="{{ ASSET_PATH }}/jplist/css/jplist.textbox-filter.min.css" rel="stylesheet" type="text/css" />
-    
-    <!-- Custom styles -->
-    <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+  <!-- Enable responsive viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- font libs -->
+  <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css"/>
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"/>
 
-    <!-- atom & rss feed -->
-    <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
-    <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
+  <!-- favicon -->
+  <link rel="shortcut icon" href="/images/favicon.ico"/>
+  <!-- Bootstrap styles -->
+  <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Optional theme -->
+  <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+  <!-- JPList css -->
+  <link href="{{ ASSET_PATH }}/jplist/css/jplist.core.min.css" rel="stylesheet" type="text/css"/>
+  <link href="{{ ASSET_PATH }}/jplist/css/jplist.pagination-bundle.min.css" rel="stylesheet" type="text/css"/>
+  <link href="{{ ASSET_PATH }}/jplist/css/jplist.textbox-filter.min.css" rel="stylesheet" type="text/css"/>
+  <link href="{{ ASSET_PATH }}/jplist/css/jplist.bootstrap-demo.min.css" rel="stylesheet" type="text/css"/>
+  <!-- Custom styles -->
+  <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
-  </head>
+  <!-- atom & rss feed -->
+  <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate"
+        title="Sitewide ATOM Feed">
+  <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate"
+        title="Sitewide RSS Feed">
 
-  <body>
-    <div id="wrap">
-      <header>
-        <nav class="navbar navbar-inverse" role="navigation">
-          <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="{{ HOME_PATH }}"><img src="/images/logo/tien-phat-locksmith-brand.png" alt="{{ site.title }}" height="40"></a>
-            </div>
+</head>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="jb-navbar-collapse">
-              <ul class="nav navbar-nav">
-                  <li><a href="/about/index.html">Làm</a></li>
-                  <li><a href="/keys/index.html">Chìa</a></li>
-                  <li><a href="/locks/index.html">Khóa</a></li>
-                  <li><a href="/cars/index.html">Ô tô</a></li>
-                  <li><a href="/safes/index.html">Két sắt</a></li>
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                {% assign pages_list = site.pages %}
-                {% assign group = 'navigation' %}
-                {% include JB/pages_list %}
-              </ul>
-            </div><!-- /.navbar-collapse -->
-          </div>
-        </nav>
-      </header>
-      
-      <!-- main content -->
+<body>
+<div id="wrap">
+  <header>
+    <nav class="navbar navbar-inverse" role="navigation">
       <div class="container">
-        {{ content }}
-      </div>
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{{ HOME_PATH }}"><img src="/images/logo/tien-phat-locksmith-brand.png"
+                                                              alt="{{ site.title }}" height="40"></a>
+        </div>
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="jb-navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/about/index.html">Làm</a></li>
+            <li><a href="/keys/index.html">Chìa</a></li>
+            <li><a href="/locks/index.html">Khóa</a></li>
+            <li><a href="/cars/index.html">Ô tô</a></li>
+            <li><a href="/safes/index.html">Két sắt</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            {% assign pages_list = site.pages %}
+            {% assign group = 'navigation' %}
+            {% include JB/pages_list %}
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div>
+    </nav>
+  </header>
+
+  <!-- main content -->
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 header-search">
+        <form id="search-form" action="/search/index.html" method="get">
+          <div class="input-group">
+            <input id="search-box" type="text" class="form-control" autocomplete="off"
+                   placeholder="Tìm kiếm sản phẩm, danh mục hay thương hiệu mong muốn..."
+                   name="search">
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+          </span>
+          </div>
+        </form>
+      </div>
     </div>
 
-    <div id="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-            với sự giúp đỡ của <span><a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a></span> và <span><a href="http://getbootstrap.com" target="_blank">Bootstrap</a></span>
-            </p>
+    <div id="demo">
+      <div class="jplist-panel">
+        <!-- panel -->
+        <div class="jplist-panel box panel-top">
+          <!-- search any text in the element -->
+          <div class="text-filter-box">
+            <input id="search-form-jplist"
+                   data-path="*"
+                   type="hidden"
+                   value=""
+                   data-control-type="textbox"
+                   data-control-name="title-filter"
+                   data-control-action="filter"
+            />
           </div>
         </div>
       </div>
+      {{ content }}
     </div>
+  </div>
 
-    {% include JB/analytics %}
+</div>
+
+<div id="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <small>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
+          với sự hỗ trợ của <span><a href="http://jekyllbootstrap.com" target="_blank"
+                                     title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a></span>,
+          <span><a
+              href="http://getbootstrap.com" target="_blank">Bootstrap</a></span><span> và </span><a
+              href="http://jplist.com/" target="_blank" title="jPList - jQuery Data Grid Controls">jPList Software</a>
+        </small>
+      </div>
+    </div>
+  </div>
+</div>
+
+{% include JB/analytics %}
 
 
-    <!-- Latest compiled and minified JavaScript, requires jQuery 1.x (2.x not supported in IE8) -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
-    <!-- JPList js -->
-    <script src="{{ ASSET_PATH }}/jplist/js/jplist.core.min.js"></script>
-    <script src="{{ ASSET_PATH }}/jplist/js/jplist.pagination-bundle.min.js"></script>
-    <script src="{{ ASSET_PATH }}/jplist/js/jplist.textbox-filter.min.js"></script>
-    <!-- -->
-    <script src="{{ ASSET_PATH }}/js/app.js"></script>
-  </body>
+<!-- Latest compiled and minified JavaScript, requires jQuery 1.x (2.x not supported in IE8) -->
+<!-- Placed at the end of the document so the pages load faster -->
+<!-- jQuery lib -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+<script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
+<!-- JPList js -->
+<script src="{{ ASSET_PATH }}/jplist/js/jplist.core.min.js"></script>
+<script src="{{ ASSET_PATH }}/jplist/js/jplist.pagination-bundle.min.js"></script>
+<script src="{{ ASSET_PATH }}/jplist/js/jplist.textbox-filter.min.js"></script>
+<script src="{{ ASSET_PATH }}/jplist/js/jplist.bootstrap-pagination-bundle.min.js"></script>
+
+<script src="{{ ASSET_PATH }}/js/app.js"></script>
+</body>
 </html>
