--- a/_includes/themes/mytheme/default.html
+++ b/_includes/themes/mytheme/default.html
@@ -91,20 +91,18 @@
     </div>
 
     <div id="demo">
-      <div class="jplist-panel">
-        <!-- panel -->
-        <div class="jplist-panel box panel-top">
-          <!-- search any text in the element -->
-          <div class="text-filter-box">
-            <input id="search-form-jplist"
-                   data-path="*"
-                   type="hidden"
-                   value=""
-                   data-control-type="textbox"
-                   data-control-name="title-filter"
-                   data-control-action="filter"
-            />
-          </div>
+      <!-- panel -->
+      <div class="jplist-panel box panel-top">
+        <!-- search any text in the element -->
+        <div class="text-filter-box">
+          <input id="search-form-jplist"
+                 data-path="*"
+                 type="hidden"
+                 value=""
+                 data-control-type="textbox"
+                 data-control-name="title-filter"
+                 data-control-action="filter"
+          />
         </div>
       </div>
       {{ content }}
@@ -143,6 +141,8 @@
 <script src="{{ ASSET_PATH }}/jplist/js/jplist.pagination-bundle.min.js"></script>
 <script src="{{ ASSET_PATH }}/jplist/js/jplist.textbox-filter.min.js"></script>
 <script src="{{ ASSET_PATH }}/jplist/js/jplist.bootstrap-pagination-bundle.min.js"></script>
+<script src="{{ ASSET_PATH }}/jplist/js/jplist.sort-bundle.min.js"></script>
+<script src="{{ ASSET_PATH }}/jplist/js/jplist.bootstrap-sort-dropdown.min.js"></script>
 
 <script src="{{ ASSET_PATH }}/js/app.js"></script>
 </body>
