--- a/_includes/themes/mytheme/default.html
+++ b/_includes/themes/mytheme/default.html
@@ -83,7 +83,10 @@
                    placeholder="Tìm kiếm sản phẩm, danh mục hay thương hiệu mong muốn..."
                    name="search">
           <span class="input-group-btn">
-            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            <button class="btn btn-default" type="submit">
+              <i class="glyphicon glyphicon-search"></i>
+              <span class="search-label"> Tìm kiếm</span>
+            </button>
           </span>
           </div>
         </form>
