--- a/_includes/themes/mytheme/default.html
+++ b/_includes/themes/mytheme/default.html
@@ -80,7 +80,7 @@
           <div class="input-group">
             <input id="search-box" type="text" class="form-control" autocomplete="off"
                    placeholder="Tìm kiếm sản phẩm, danh mục hay thương hiệu mong muốn..."
-                   name="search">
+                   name="q">
           <span class="input-group-btn">
             <button class="btn btn-default" type="submit">
               <i class="glyphicon glyphicon-search"></i>
