--- a/_includes/themes/mytheme/default.html
+++ b/_includes/themes/mytheme/default.html
@@ -167,6 +167,7 @@
 <script src="{{ ASSET_PATH }}/jplist/js/jplist.bootstrap-pagination-bundle.min.js"></script>
 <script src="{{ ASSET_PATH }}/jplist/js/jplist.bootstrap-sort-dropdown.min.js"></script>
 
+<script src="/assets/data.js"></script>
 <script src="{{ ASSET_PATH }}/js/app.js"></script>
 </body>
 </html>
