change address info

--- a/_includes/themes/mytheme/default.html
+++ b/_includes/themes/mytheme/default.html
@@ -63,9 +63,16 @@
             <li><a href="/safes/index.html">Két sắt</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                 aria-expanded="false">Blog <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                {% assign pages_list = site.pages %}
+                {% assign group = 'navigation' %}
+                {% include JB/pages_list %}
+              </ul>
+            </li>
+
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
@@ -127,12 +134,12 @@
       <div class="col-sm-4">
         <p>Liên hệ:</p>
         <a href="tel:(+84)0905748973">
-          <p>- Dịch vụ: 0905748973</p>
+          <p>0905.74.89.73</p>
         </a>
-        <a href="tel:(+84)01224512545">
-          <p>- Mua hàng: 01224512545</p>
+        <a href="tel:(+84)0942975959">
+          <p>0942.97.97.59</p>
         </a>
-        <p>Địa chỉ: 05 Nguyễn Văn Cừ, TP. Buôn Ma Thuột</p>
+        <p>Địa chỉ: 10 Nguyễn Chí Thanh, TP. Buôn Ma Thuột</p>
       </div>
       <div class="col-sm-4">
         <iframe
@@ -142,13 +149,11 @@
     </div>
     <div class="row">
       <div class="col-sm-12">
-        <small>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-          với sự hỗ trợ của <span><a href="http://jekyllbootstrap.com" target="_blank"
-                                     title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a></span>,
-          <span><a
-              href="http://getbootstrap.com" target="_blank">Bootstrap</a></span><span> và </span><a
-              href="http://jplist.com/" target="_blank" title="jPList - jQuery Data Grid Controls">jPList Software</a>
-        </small>
+        <small>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}</small>
+        <small>Powered by <span><a href="http://jekyllrb.com">Jekyll Bootstrap</a></span> and <span><a
+            href="https://pages.github.com">Github
+          Pages</a>
+        </span></small>
       </div>
     </div>
   </div>
